--- a/pom.xml
+++ b/pom.xml
@@ -38,11 +38,24 @@
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>iam</artifactId>
             <version>2.26.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>core</artifactId>
+            <version>2.26.1</version>
+            <type>pom</type>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>iam</artifactId>
+            <version>2.26.1</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
